test/language/spec/pipeline/invalid/pipeline_no_terminal.topo
// TEST: pipeline without terminal edge
// EXPECT-ERROR: no terminal

namespace app {
  public:
    void run();
    fn run {
      a -> b;
      b -> c;
    }

  protected:
    void a();
    void b();
    void c();
}
